- [x] Puedes añadir una interface grafica para el servidor federado qe contenga un login, y un dashboard que permita ver todos los nodos y sus estados indicando el nodo lider
- [x] Actualizar curl, shell, driver con el uso de servidor federado y actualizar la documentacion respectiva
- [x] Crear la interface web del servidor federado.

- [x] Crea un proyecto a nivel de jettra-server llamado jettra-federated cuya funcion es actuar como servidor federado
este servidor no almacena bases de datos ni reglas ni indices es un enrutador interno que se usa para asignar 
mediante algoritmo de consenso el lider y los nodos leyendo la configuracion de config.json
El actualiza la base de datos del lider con los nodos y el estatus y se asegura de que sean replicadaos a todos los nodos
si el lider falla asigna otro nodo como lider.
Si falla el servidor federado otro servidor federado toma el lugar de lider federado.
Actualiza la interfaces web, el shell, curl y driver para implementarlo.
Ademas crea en /books/guide/federated.md donde se describe el objetivo como se implementa.